--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-beautifulsoup4==4.12.3
 requests==2.31.0
-python-dotenv==0.21.1
-pdfplumber==0.9.0
-trafilatura==1.5.0
-markdown==3.4.4
-python-slugify==8.0.1
-pyppeteer==1.0.2
-aiohttp==3.8.6
-html2text==2020.1.16
+beautifulsoup4==4.12.2
+selenium==4.15.2
+playwright==1.40.0
+markdownify==0.11.6
+lxml==4.9.3
+python-dotenv==1.0.0
+aiohttp==3.9.1
+asyncio-throttle==1.0.2
+urllib3==2.1.0 
